--- a/_overleaf-draft.qmd
+++ b/_overleaf-draft.qmd
@@ -7,21 +7,27 @@ Fewer unconscious visual images in aphantasia: objective assessment of unconscio
 
 # Current introduction
 
-\section{Introduction}
-\label{sec:intro}
+*Let's sum up each paragraph*
 
-Most human beings can form clear images in the "\textit{mind's eye}", such as when recalling a past episode: this phenomenon is referred to as "mental imagery". Nonetheless, there is a large variability between individuals in the vividness of these images, whether they be voluntary or involuntary. A minority of people is unable to prevent intrusive images in their minds, as seen in Post-Traumatic Stress Disorder (PTSD). At the opposite end of the spectrum, another minority of people is unable to even conjure a mental image, a condition recently coined "\textit{aphantasia}" \citep{zemanLivesImageryCongenital2015}. Aphantasia represents an interesting knock-out model for studying mental imagery. However, much remains unknown about this condition, and most of the studies on aphantasia rely on subjective reports, leaving the question of whether mental images can exist without reaching consciousness unresolved. It has been showed that mental images can reach consciousness voluntarily or involuntarily and influence perception as a prime \citep{kwokMeasuringThoughtControlFailure2019}. Going even further, it was argued this priming effect of mental images could also occur involuntarily without them reaching consciousness. Using a priming paradigm, the aim of the present study was to objectively assess the conscious and unconscious mental imagery in aphantasia.
+<!-- Most human beings can form clear images in the "\textit{mind's eye}", such as when recalling a past episode: this phenomenon is referred to as "mental imagery". Nonetheless, there is a large variability between individuals in the vividness of these images, whether they be voluntary or involuntary. A minority of people is unable to prevent intrusive images in their minds, as seen in Post-Traumatic Stress Disorder (PTSD). At the opposite end of the spectrum, another minority of people is unable to even conjure a mental image, a condition recently coined "\textit{aphantasia}" \citep{zemanLivesImageryCongenital2015}. Aphantasia represents an interesting knock-out model for studying mental imagery. However, much remains unknown about this condition, and most of the studies on aphantasia rely on subjective reports, leaving the question of whether mental images can exist without reaching consciousness unresolved. It has been showed that mental images can reach consciousness voluntarily or involuntarily and influence perception as a prime \citep{kwokMeasuringThoughtControlFailure2019}. Going even further, it was argued this priming effect of mental images could also occur involuntarily without them reaching consciousness. Using a priming paradigm, the aim of the present study was to objectively assess the conscious and unconscious mental imagery in aphantasia. -->
+   > Here are mental images. Some have them, even sometimes intrusive, others have not. These latter could be used to study unconscious imagery. The issue is knowing whether mental images can be unconscious. So here our study wants to study them on aphantasia
 
-% \subsection{Visual imagery and the nature of mental representations}
-% \label{sec:mental_representations}
+<!-- A classical definition of visual imagery is ‘seeing’ in the absence of the appropriate immediate sensory input \citep{kosslynCaseMentalImagery2006}. More recently, visual imagery has been defined as representations and the accompanying experience of sensory information without a direct external stimulus \citep{pearson_human_2019}. It was even proposed that mental imagery is a perceptual processing in the early sensory cortices, V1, V2, V4/V8, and MT, that is not triggered directly by sensory input \citep{nanay_multimodal_2018, nanay_unconscious_2020, nanay_mental_2023}. Numerous studies have provided evidence for an involvement of sensory mental representations in cognition. For instance, visual imagery would be solicited in autobiographical memory and future thinking \citep[e.g.][]{purkartAmeliorerRememorationEvenements2019, schacterCognitiveNeuroscienceConstructive2007, schacterRememberingImagineFuture2007}, working memory \citep[e.g.][]{reyWhenReactivatedVisual2018, serencesStimulusSpecificDelayActivity2009}, language comprehension \citep[e.g.][]{dilsVisualMotionAftereffect2010}, moral reasoning \citep[e.g.][]{amitYouSeeEnds2012}, dreams \citep[e.g.][]{horikawaNeuralDecodingVisual2013} or expectations about upcoming tasks \citep[e.g.][]{kokPriorExpectationsEvoke2014}.  -->
+  > Here's a definition of mental imagery. Based on neuroimagery, a lot of people think that it relies on sensory stuff. Here's also where it's very useful.
 
-A classical definition of visual imagery is ‘seeing’ in the absence of the appropriate immediate sensory input \citep{kosslynCaseMentalImagery2006}. More recently, visual imagery has been defined as representations and the accompanying experience of sensory information without a direct external stimulus \citep{pearson_human_2019}. It was even proposed that mental imagery is a perceptual processing in the early sensory cortices, V1, V2, V4/V8, and MT, that is not triggered directly by sensory input \citep{nanay_multimodal_2018, nanay_unconscious_2020, nanay_mental_2023}. Numerous studies have provided evidence for an involvement of sensory mental representations in cognition. For instance, visual imagery would be solicited in autobiographical memory and future thinking \citep[e.g.][]{purkartAmeliorerRememorationEvenements2019, schacterCognitiveNeuroscienceConstructive2007, schacterRememberingImagineFuture2007}, working memory \citep[e.g.][]{reyWhenReactivatedVisual2018, serencesStimulusSpecificDelayActivity2009}, language comprehension \citep[e.g.][]{dilsVisualMotionAftereffect2010}, moral reasoning \citep[e.g.][]{amitYouSeeEnds2012}, dreams \citep[e.g.][]{horikawaNeuralDecodingVisual2013} or expectations about upcoming tasks \citep[e.g.][]{kokPriorExpectationsEvoke2014}. 
-
-The nature of mental images has been debated for decades. On the one hand, it was argued that visual imagery relies on language-like symbolic and descriptive representations \citep[referred to as the "propositional" position;][]{pylyshynImageryDebateAnalogue1981}. On the other hand, it was argued that visual imagery relies on representations that include the sensorimotor features of the components of the item being represented and the spatial relationships between those components \citep[referred to as the "depitcive" position;][]{kosslynMediumMessageMental1981}. Today, the imagery debate seems to have settled with the advent of neuroimagery, given the substantial evidence indicating that visual imagery involves depictive representations \citep{pearson_mental_2015}. However, some clarifications remain to be made as to the nature of mental images, including whether they are conscious or unconscious, voluntary or involuntary.
+<!-- The nature of mental images has been debated for decades. On the one hand, it was argued that visual imagery relies on language-like symbolic and descriptive representations \citep[referred to as the "propositional" position;][]{pylyshynImageryDebateAnalogue1981}. On the other hand, it was argued that visual imagery relies on representations that include the sensorimotor features of the components of the item being represented and the spatial relationships between those components \citep[referred to as the "depitcive" position;][]{kosslynMediumMessageMental1981}. Today, the imagery debate seems to have settled with the advent of neuroimagery, given the substantial evidence indicating that visual imagery involves depictive representations \citep{pearson_mental_2015}. However, some clarifications remain to be made as to the nature of mental images, including whether they are conscious or unconscious, voluntary or involuntary. -->
+  > There was a debate on sensory or propositional. Now neuroimagery has gone by, and ok it's sensory. But the voluntary/involuntary and conscious/unconscious images is debated.
 
 Mental imagery is mainly viewed and studied as the ability to voluntarily form mental images, and to experience them consciously (explicit mental imagery). This ability gives the possibility to consciously inspect and manipulate mental images to perform cognitive tasks, and those mental images are viewed as analogous to perceived images. For instance, objects in visual mental images can be rotated, and the farther they are rotated, the more time is required, as it would be for perceived images \citep{shepardMentalRotationThreeDimensional1971}. In the same manner, objects in visual mental images can be scanned, and the farther one scans, the more time is required \citep{kosslynInformationRepresentationVisual1975}. The analogy can also be observed in priming paradigms, where conscious and voluntary mental images prime perception in the same way as perceived images (although the priming is typically weaker). For instance, mental imagery priming has been evidenced using binocular rivalry tasks. In binocular rivalry tasks, different images, such as red and green Gabors with different line orientation, are presented to the two eyes, and participants’ visual experience alternates between these two images. At the same time, participants are asked to report which color is dominant. It was show that when asking participants to form the mental image of a red apple just before reporting the dominant Gabor’s color, the mental image acted as a prime and the red Gabor won out systematically in the subsequent binocular rivalry task \citep[e.g.,][]{kwokMeasuringThoughtControlFailure2019, pearsonEvaluatingMindEye2011}.
+  > Mental imagery is mostly studied as conscious and voluntary. Now here are examples that show that mental images have sensory properties. *This is incohenrent, no real point here*
 
 However, mental images can also be triggered by internal associations or external events and involuntarily reach consciousness \citep{pearsonPhantomPerceptionVoluntary2015}. For instance, it was shown that mental images involuntarily reached consciousness when involuntary autobiographical memories were triggered or primed by irrelevant cue phrases in a vigilance task (\citealp{schlagmanInvoluntaryAutobiographicalMemories2008}; see also \citealp{barzykowskiPrimingInvoluntaryAutobiographical2018}; \citealp{blackwellInducingPositiveInvoluntary2020}). Interestingly, it has been proposed that mental imagery could also be both involuntary and unconscious \citep{nanay_unconscious_2020}. The existence of such a form of mental imagery has been questioned \citep{pearson_human_2019}, but striking evidence comes from perceptual processing studies. For instance, several studies have shown using masking paradigms that a stimulus can still be perceived yet without a conscious experience of it \citep[e.g.][]{goodaleSightUnseenExploration2013, kentridgeAttentionAwarenessBlindsight1999, kouiderLevelsProcessingNonconscious2007, weiskrantzBlindsightCaseStudy2009}. It was also evidenced that stimuli presented to the contralesional side of unilateral neglect patients’ visual field can prime their responses, suggesting a unconscious perception of the stimulus \citep[e.g.][]{bertiVisualProcessingAwareness1992, ladavasImplicitAssociativePriming1993}. Consistently with the proposed view of mental imagery, evidence suggests that unilateral neglect patients can also show similar a behaviour for the contralesional side of their visual images – a phenomenon called "imaginal neglect" \citep{coslettNeglectVisionVisual1997, guarigliaUnilateralNeglectRestricted1993}. These findings suggest that mental imagery could also be unconscious. 
+  >
+
+  > Here are mental images. Some have them, even sometimes intrusive, others have not. These latter could be used to study unconscious imagery. The issue is knowing whether mental images can be unconscious. So here our study wants to study them on aphantasia
+  > Here's a definition of mental imagery. Based on neuroimagery, a lot of people think that it relies on sensory stuff. Here's also where it's very useful.
+  > There was a debate on sensory or propositional. Now neuroimagery has gone by, and ok it's sensory. But the voluntary/involuntary and conscious/unconscious images is debated.
+  > Mental imagery is mostly studied as conscious and voluntary. Now here are examples that show that mental images have sensory properties. *This is incohenrent, no real point here*
 
 Additional insights of unconscious and involuntary mental imagery come from embodied cognition which suggests that sensorimotor simulation might be a kind of unconscious and involuntary mental imagery  \citep{murakiInsightsEmbodiedCognition2023}. A sensorimotor simulation is the re-creation of the states in which the individual's perceptual and motor systems were in a previous experience, as well as the individual's emotional and introspective states in that experience \citep[e.g.,][]{barsalouGroundedCognition2008, barsalouSimulationSituatedConceptualization2009, dijkstraMechanismsEmbodiment2015, milleSensMemoire2021, versaceContentsLongtermMemory2009, versaceActInIntegratedView2014, versaceCognitionIncarneeCognition2018}. From this re-creation emerges a representation that can reach consciousness in the form of a mental image of, for instance, an apple, if the neurons in the perceptual and motor systems that were activated during our confrontations with apples are reactivated in the present situation. However, it is assumed that emerging representations do not systematically reach consciousness voluntarily. For instance, reading the word “apple” will automatically trigger the emergence of multimodal representations (e.g., of its look, taste, smell, sound and grip) without necessarily reaching consciousness, but that can act as a prime and influence a subsequent behavioral response, as it was shown in cross-modal priming studies \citep[e.g.][]{brunelSensoryNatureKnowledge2010, reyMaskWhoWasn2015, reyAutomaticVisualSimulation2017, valletPerceptualNatureCrossModal2010}. As such, these multimodal representations might be a form of unconscious and involuntary mental images.
 
